// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`whiteSpaceCollapsing renders 0 1`] = `
Array [
  .c0 {
  white-space-collapsing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders function 1`] = `
Array [
  .c0 {
  white-space-collapsing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: has;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders invalid theme path 1`] = `
Array [
  .c0 {
  white-space-collapsing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders negative number 1`] = `
Array [
  .c0 {
  white-space-collapsing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-collapsing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-collapsing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-collapsing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    white-space-collapsing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    white-space-collapsing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    white-space-collapsing: July;
  }
}

@media April {
  .c0 {
    white-space-collapsing: August;
  }
}

@media January {
  .c0 {
    white-space-collapsing: September;
  }
}

@media April {
  .c0 {
    white-space-collapsing: November;
  }
}

@media June {
  .c0 {
    white-space-collapsing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    white-space-collapsing: July;
  }
}

@media April {
  .c0 {
    white-space-collapsing: August;
  }
}

@media January {
  .c0 {
    white-space-collapsing: September;
  }
}

@media April {
  .c0 {
    white-space-collapsing: November;
  }
}

@media June {
  .c0 {
    white-space-collapsing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space-collapsing: January;
  }
}

@media April {
  .c0 {
    white-space-collapsing: December;
  }
}

@media January {
  .c0 {
    white-space-collapsing: April;
  }
}

@media April {
  .c0 {
    white-space-collapsing: May;
  }
}

@media June {
  .c0 {
    white-space-collapsing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    white-space-collapsing: January;
  }
}

@media April {
  .c0 {
    white-space-collapsing: December;
  }
}

@media January {
  .c0 {
    white-space-collapsing: April;
  }
}

@media April {
  .c0 {
    white-space-collapsing: May;
  }
}

@media June {
  .c0 {
    white-space-collapsing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders postitive number 1`] = `
Array [
  .c0 {
  white-space-collapsing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders string 1`] = `
Array [
  .c0 {
  white-space-collapsing: July;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: July;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: June;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`whiteSpaceCollapsing renders valid theme path 1`] = `
Array [
  .c0 {
  white-space-collapsing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  white-space-collapsing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
